# agenticSeek

./: .dockerignore  .env.example  .gitignore  Dockerfile.backend  README.md  README_CHS.md  README_CHT.md  README_ES.md  README_FR.md  README_JP.md  README_PTBR.md  api.py  cli.py  config.ini  docker-compose.yml  pyproject.toml  requirements.txt  setup.py  start_services.cmd  start_services.sh
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build-router-api.yml  test-router-api.yml
docs/: CONTRIBUTING.md
frontend-v2/: .env.example  README.md  package-lock.json  package.json
frontend-v2/src/: App.jsx  index.css  main.jsx
frontend-v2/src/components/: theme-toggle.jsx
frontend-v2/src/components/ui/: badge.jsx  button.jsx  collapsible.jsx  scroll-area.jsx
frontend/agentic-seek-front/src/: App.js
llm_router/: dl_safetensors.sh  examples.json
prompts/base/: coder_agent.txt  planner_agent.txt
router-api/: .dockerignore  DEPLOYMENT.md  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  main.py  requirements.txt  start.sh  test_api.py
scripts/: linux_install.sh  macos_install.sh  windows_install.bat
searxng/: uwsgi.ini
sources/: browser.py  interaction.py  language.py  llm_provider.py  memory.py  router.py  schemas.py  speech_to_text.py  text_to_speech.py
sources/agents/: agent.py  browser_agent.py  casual_agent.py  code_agent.py  file_agent.py  mcp_agent.py  planner_agent.py
sources/tools/: fileFinder.py  mcpFinder.py  searxSearch.py  tools.py
tests/: test_browser_agent_parsing.py
