[project]
name = "agenticseek"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [

    "aiofiles>=24.1.0",
    "anyio>=3.5.0,<5",
    "celery>=5.5.1",
    "certifi==2025.4.26",
    "chromedriver-autoinstaller>=0.6.4",
    "colorama>=0.4.6",
    "distro>=1.7.0,<2",
    "fake-useragent>=2.1.0",
    "fastapi>=0.115.12",
    "flask>=3.1.0",
    "httpx>=0.27,<0.29",
    "ipython>=8.13.0",
    "jiter>=0.4.0,<1",

    "markdownify>=1.1.0",
    "numpy>=1.24.4",
    "ollama>=0.4.7",

    "protobuf>=3.20.3",

    "pydantic>=2.10.6",
    "pydantic-core>=2.27.2",
    "pypdf>=5.4.0",

    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "sacremoses>=0.0.53",

    "selenium>=4.27.1",
    "selenium-stealth>=1.0.6",

    "setuptools>=75.6.0",
    "sniffio>=1.3.1",

    "termcolor>=2.4.0",

    "tqdm>4",

    "undetected-chromedriver>=3.5.5",
    "uvicorn>=0.34.0",
]
